<resources>
    <string name="app_name">mobile</string>
    <string name="primeiro_nome">Primeiro Nome</string>
    <string name="ultimo_nome">Sobrenome</string>
    <string name="cadastro">Cadastro</string>
    <string name="temUmLogin">Já tem um login?</string>
    <string name="cpf">CPF</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="confirme_a_senha">Confirme a senha</string>
    <string name="criar_conta">Criar conta</string>
    <string name="sem_agendamento">Sem Agendamento</string>
    <string name="agendar">Agendar</string>
    <string name="excluir">Excluir</string>
    <string name="alterar">Alterar</string>
    <string name="agendamento">Agendamento</string>
    <string name="data">Data</string>
    <string name="hor_rio">Horário</string>
    <string name="procedimento">Procedimento</string>
    <string name="forma_de_pagamento">Forma de Pagamento</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="entrar">Entrar</string>
    <string name="n_o_possui_conta_n_clique_aqui_para_criar_uma">Não possui conta?\n Clique aqui para criar uma.</string>
    <string name="login">LOGIN</string>
    <string name="studio_nevelyn">Studio\nEvelyn</string>
    <string name="sair">Sair</string>

</resources>