<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/linear_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Atualiza_Agendamento_Activity">

    <TextView
        android:id="@+id/textoAgendamentoEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/agendamento"
        android:textColor="#C30C6B"
        android:textSize="35sp"
        android:fontFamily="@font/js_math_cmmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dataAgendamentoEditar"
        style="@style/EditTextDefault"
        android:layout_width="200dp"
        android:layout_marginTop="60dp"
        android:autofillHints="name"
        android:hint="@string/data"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textoAgendamentoEditar" />

    <EditText
        android:id="@+id/horaAgendamentoEditar"
        style="@style/EditTextDefault"
        android:layout_width="200dp"
        android:layout_marginTop="16dp"
        android:autofillHints="name"
        android:hint="@string/hor_rio"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dataAgendamentoEditar" />

    <TextView
        android:id="@+id/textoProcedimentoEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/procedimento"
        android:textSize="35sp"
        android:fontFamily="@font/js_math_cmmi"
        android:textColor="#C30C6B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horaAgendamentoEditar" />


    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flowCheckboxesEditar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="cbBrasileiroEditar,cbComboEditar,cbDesignEditar,cbFoxEditar,cbHennaEditar,cbHibridoEditar,cbLabioEditar,cbMegaEditar,cbNaturalEditar"
        app:flow_horizontalAlign="end"
        app:flow_horizontalGap="16dp"
        app:flow_lastHorizontalBias="0.5"
        app:flow_verticalGap="16dp"
        app:flow_wrapMode="aligned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textoProcedimentoEditar" />

    <CheckBox android:id="@+id/cbBrasileiroEditar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Brasileiro" />
    <CheckBox android:id="@+id/cbComboEditar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Combo" />
    <CheckBox android:id="@+id/cbDesignEditar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Design" />
    <CheckBox android:id="@+id/cbFoxEditar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Fox" />
    <CheckBox android:id="@+id/cbHennaEditar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Henna" />
    <CheckBox android:id="@+id/cbHibridoEditar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Hibrido" />
    <CheckBox android:id="@+id/cbLabioEditar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Labio" />
    <CheckBox android:id="@+id/cbMegaEditar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Mega" />
    <CheckBox android:id="@+id/cbNaturalEditar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Natural" />
    <!--        <CheckBox android:id="@+id/cbShadow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Shadow\nR$280,00" />-->
    <!--        <CheckBox android:id="@+id/cbRusso" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Russo\nR$150,00" />-->
    <!--        <CheckBox android:id="@+id/cbCompleto" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Completo\nR$200,00" />-->
    <!--        <CheckBox android:id="@+id/cbKardashian" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Kardashian\nR$150,00" />-->
    <!--        <CheckBox android:id="@+id/cbLabioNatural" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Labio Natural\nR$250,00" />-->
    <!--        <CheckBox android:id="@+id/cbMicropigmentacao" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Micropigmentacao\nR$250,00" />-->

    <TextView
        android:id="@+id/textoFormaDePagamentoEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/forma_de_pagamento"
        android:textColor="#C30C6B"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/flowCheckboxesEditar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <RadioGroup
        android:id="@+id/radioGroupEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textoFormaDePagamentoEditar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <RadioButton
            android:id="@+id/chkCartaoEditar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Cartão de crédito"
            app:layout_constraintTop_toBottomOf="@id/textoFormaDePagamentoEditar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"/>

        <RadioButton
            android:id="@+id/chkPixEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pix"
            app:layout_constraintTop_toBottomOf="@id/textoFormaDePagamentoEditar"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textoValorDinamicoEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total: R$0,00"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/radioGroupEditar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnAgendarEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/agendar"
        android:backgroundTint="#C30C6B"
        app:layout_constraintTop_toBottomOf="@id/textoValorDinamicoEditar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>